fix: added styles against text overflow

--- a/src/blocks/education/__button/education__button.css
+++ b/src/blocks/education/__button/education__button.css
@@ -16,6 +16,9 @@
     position: absolute;
     top: 0;
     padding: inherit;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
 }
 
 .education__button:hover {
