--- a/src/blocks/education/__header/education__header.css
+++ b/src/blocks/education/__header/education__header.css
@@ -7,5 +7,7 @@
     text-align: center;
     letter-spacing: 0.1px;
     text-transform: uppercase;
-    margin: 0;
+    margin: 0 auto;
+    max-width: 83%;
+    word-wrap: break-word;
 }
