--- a/src/blocks/education/__image/education__image.css
+++ b/src/blocks/education/__image/education__image.css
@@ -3,4 +3,6 @@
     height: 364px;
     width: 445px;
     border-radius: 10px;
+    align-self: center;
+    
 }
