--- a/src/blocks/education/__item-text/education__item-text.css
+++ b/src/blocks/education/__item-text/education__item-text.css
@@ -4,4 +4,5 @@
     font-size: 18px;
     line-height: 30px;
     letter-spacing: 0.1px;
+    max-width: 45%;
 }
