--- a/src/blocks/education/__list-title/education__list-title.css
+++ b/src/blocks/education/__list-title/education__list-title.css
@@ -6,4 +6,5 @@
     letter-spacing: 0.1px;
     color: #000D26;
     margin: 0;
+    max-width: 100%;
 }
